feat: add 2-second delay before AI rolls dice